--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
-    "dev": "pnpm --filter @nicefox/graphdb dev",
+    "dev": "pnpm --filter nicefox-graphdb-server dev",
     "build": "pnpm -r build"
   },
   "devDependencies": {
