chore: add pre-commit hook to auto-build dist

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "prepare": "cp hooks/pre-commit .git/hooks/ && chmod +x .git/hooks/pre-commit",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
