feat(tck): Add CLI tool for running individual TCK tests
Adds a new 'pnpm tck' command for quickly testing individual scenarios:

Usage:
  pnpm tck 'Return6|11'           # Run specific test
  pnpm tck 'Return6' --list       # List all Return6 tests
  pnpm tck 'Match3|15' -v         # Run with verbose output
  pnpm tck 'Return6|11' --sql     # Show generated SQL
  pnpm tck 'Return6|11' --force   # Run even if in failing list

This makes debugging TCK compliance much faster by avoiding the need
to manually write test scripts for each scenario.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "dev": "pnpm --filter nicefox-graphdb-server dev",
-    "build": "pnpm -r build"
+    "build": "pnpm -r build",
+    "tck": "npx tsx packages/server/test/tck/run-test.ts"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
