--- a/packages/nicefox-graphdb/package.json
+++ b/packages/nicefox-graphdb/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nicefox-graphdb-pkg",
+  "name": "nicefox-graphdb",
   "version": "1.0.2",
   "private": true,
   "description": "SQLite-based graph database with Cypher query support",
