--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "dev": "pnpm --filter nicefox-graphdb-server dev",
     "build": "pnpm -r build",
     "tck": "npx tsx packages/server/test/tck/run-test.ts",
-    "prepublishOnly": "pnpm --filter nicefox-graphdb run build"
+    "prepublishOnly": "pnpm build"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.0",
