feat(benchmark): add performance optimization workflow
- Add benchmark:analyze script to identify bottlenecks and provide hints
- Add agents/PERFORMANCE_OPTIMIZATION.md workflow document
- Add benchmark/OPTIMIZATION_LOG.md for tracking optimization iterations
- Analyze shows top slowest queries with investigation hints
- Compare mode shows improvements/regressions between runs

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "prepublishOnly": "npm run build",
     "benchmark": "node --import tsx benchmark/src/run.ts",
     "benchmark:report": "node --import tsx benchmark/src/report.ts",
-    "benchmark:compare": "node --import tsx benchmark/src/compare.ts"
+    "benchmark:compare": "node --import tsx benchmark/src/compare.ts",
+    "benchmark:analyze": "node --import tsx benchmark/src/analyze.ts"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.0",
