perf: route multi-hop fixed-length patterns to hybrid engine
- Extend isHybridCompatiblePattern() to accept 2+ hop patterns
- Extract inline node properties for chain node filters
- Fix benchmark to import from src/ instead of stale dist/

Results: related_items_depth1 improved from 30ms to 0.09ms (333x faster)

--- a/benchmark/tsconfig.json
+++ b/benchmark/tsconfig.json
@@ -6,11 +6,9 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "outDir": "dist",
-    "rootDir": "src",
-    "declaration": true,
+    "noEmit": true,
     "resolveJsonModule": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "../src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
